# my_project

./: .gitignore  FashionMNISTClassifier.ipynb  README.md  conda
.github/ISSUE_TEMPLATE/: issue-template.md
HD_ai_challenge/: pyproject.toml
HD_ai_challenge/data/: data_info.txt  y_train.csv  y_valid.csv
HD_ai_challenge/note/: binary_method.ipynb  eda.ipynb  feature_selection.ipynb  feature_selection_test.ipynb  replace_nan.ipynb  train.ipynb
HD_ai_challenge/pickle/version1/: labelencoder.pkl  lgboost.pkl  lgboost_optuna.pkl  randomforest.pkl  randomforest_optuna.pkl
HD_ai_challenge/pickle/version1_add_scaler/: lgboost.pkl  lgboost_optuna.pkl  randomforest.pkl  randomforest_optuna.pkl
HD_ai_challenge/pickle/version2/replace_mean/: lgboost.pkl  lgboost_optuna.pkl  minmaxscaler.pkl  nan_replace_mean.pkl  randomforest.pkl  randomforest_optuna.pkl
HD_ai_challenge/src/: feature_engineering.py  inference.py  model.py  preprocess.py  split_dataset.py  train.py  utils.py
jeju_specialties_price_ai_competition/: pyproject.toml
jeju_specialties_price_ai_competition/data/: X_test.csv  X_train.csv  y_train.csv  y_train_price.csv  y_train_supply.csv
jeju_specialties_price_ai_competition/note/: eda.ipynb  validation.py  validation_KFold.ipynb  validation_WalkForward.ipynb
jeju_specialties_price_ai_competition/src/: dataload.py  splitdata.py
new_drug_development/: pyproject.toml
new_drug_development/data/: X_train_HLM.csv  X_valid_HLM.csv  y_train_HLM.csv  y_train_MLM.csv  y_valid_HLM.csv  y_valid_MLM.csv
new_drug_development/note/: eda.ipynb
new_drug_development/src/: feature_engineering.py  model.py
new_drug_development/src/pickles/: HLM_lgboost.pkl  HLM_lgboost_base_params.pkl  MLM_lgboost.pkl  MLM_lgboost_base_params.pkl
web_log/: requirements.txt
(+20 files in other folders)
