[tool.poetry]
name = "hd-ai-challenge"
version = "0.1.0"
description = ""
authors = ["HoChangLee98 <ghckd3558@nvaer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
scikit-learn = "^1.3.1"
lightgbm = "^4.1.0"
pandas = "^2.1.1"
catboost = "^1.2.2"
xgboost = "^2.0.0"


[tool.poetry.group.dev.dependencies]
optuna = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
