[tool.poetry]
name = "jeju-specialties-price-ai-competition"
version = "0.1.0"
description = ""
authors = ["HoChangLee98 <ghckd3558@nvaer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.17"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
