[tool.poetry]
name = "competition-new-drug-development"
version = "0.1.0"
description = ""
authors = ["HoChangLee98 <ghckd3558@nvaer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.1.0"
lightgbm = "^4.0.0"
scikit-learn = "^1.3.0"
optuna = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
